#278: reduces warning messages during linux build